# owera-channels-manager

./: .gitattributes  .gitignore  BACKLOG.md  LICENSE  README.md  pyproject.toml
app/: backfill_playlist.py  cleanup_live.py  config.py  db.py  main.py  migrate.py  models.py  reconnect.py  schemas.py
app/routers/: channels.py  media.py  music.py  playlists.py  profiles.py  queue.py  settings.py  topics.py  trends.py  videos.py  youtube_admin.py
app/services/: analytics_loop.py  autofill_loop.py  issues.py  metadata.py  metrics_loop.py  mpt_client.py  music_gen.py  notify.py  publish_loop.py  quota.py  render_loop.py  scheduler.py  thumbnail.py  topic_playlist.py  video_gen.py  youtube.py
docs/: AUTONOMY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  status.ts  ui.tsx
run/: cleanup_at.sh  code-agent-playbook.md  code-agent.disabled  code-agent.sh  code-experiments.jsonl  com.owera.channels-manager.plist  com.owera.code-agent.plist  com.owera.growth-agent.plist  com.owera.run-check.plist  daily-agent-playbook.md  dev.sh  engagement-rubric.md  experiments.jsonl  growth-agent.sh  mpt.service  rubric_review.py  run-check-prompt.md  run-check.sh  ytmanager.service
run/agent-reports/: 2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-22.md  (+29 more)
tests/: verify_growth.py  verify_health.py  verify_issues.py  verify_notify.py  verify_oauth_redirect.py  verify_publish.py  verify_quota.py  verify_reconnect.py  verify_render.py  verify_storyboard.py  verify_topic_playlist.py
(+30 files in other folders)
